Actualizacion de codigo

--- a/.gitignore
+++ b/.gitignore
@@ -128,6 +128,12 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
+#Python Cache
+# #Data
+*.csv
+!Data/GoodReads/books-small.csv
+!Data/GoodReads/book_tags-small.csv
+!Data/GoodReads/tags.csv
 
 .vim
 
